--- a/configs/config-hpc-raptors.yml
+++ b/configs/config-hpc-raptors.yml
@@ -64,10 +64,10 @@ solver:
   WEIGHT_DECAY: 0.0001 # 0.001, 0.0001 (small dataset)
   MOMENTUM: 0.9  # only when OPT is sgd
   BASE_LR: 0.001 # if SGD use 0.01 / if Adam use 0.001
-  LR_SCHEDULER: reduce_on_plateau  # step, multistep, reduce_on_plateau, cosine_annealing
+  LR_SCHEDULER: multistep  # step, multistep, reduce_on_plateau, cosine_annealing
   LR_DECAY_RATE: 0.1
   LR_STEP_SIZE: 10  # only when LR_SCHEDULER is step
-  LR_STEP_MILESTONES: [20, 30]  # only when LR_SCHEDULER is multistep
+  LR_STEP_MILESTONES: [5, 10, 15, 20]  # only when LR_SCHEDULER is multistep
   
   use_swa: False #Stochastic Weight Averaging (SWA) to help improve generalization
   swa_lr: 0.035
