--- a/configs/config-hpc-raptors.yml
+++ b/configs/config-hpc-raptors.yml
@@ -28,7 +28,7 @@ save_interval: 10
 n_gpu: 1
 num_workers: 8
 gpu_ids: 
-seed: 42
+seed: 1234
 
 use_gradcam: True
 val_viz: False
@@ -64,7 +64,7 @@ solver:
   WEIGHT_DECAY: 0.0001 # 0.001, 0.0001 (small dataset)
   MOMENTUM: 0.9  # only when OPT is sgd
   BASE_LR: 0.001 # if SGD use 0.01 / if Adam use 0.001
-  LR_SCHEDULER: multistep  # step, multistep, reduce_on_plateau, cosine_annealing
+  LR_SCHEDULER: cosine_annealing  # step, multistep, reduce_on_plateau, cosine_annealing
   LR_DECAY_RATE: 0.1
   LR_STEP_SIZE: 10  # only when LR_SCHEDULER is step
   LR_STEP_MILESTONES: [15, 20]  # only when LR_SCHEDULER is multistep
