--- a/configs/config-hpc-raptors.yml
+++ b/configs/config-hpc-raptors.yml
@@ -1,6 +1,6 @@
 # BEFORE RUN, CHECK: cache_path, splitter, precompute, arcface_loss.activate, epochs
 
-project_name: eagleID-preprocess-lvls
+project_name: eagleID-preprocess-new
 notes: 
 use_wandb: True
 wandb_entity: winniethepooh
@@ -28,7 +28,7 @@ save_interval: 10
 n_gpu: 1
 num_workers: 8
 gpu_ids: 
-seed: 7 #42, 1234, 7, 2025
+seed: 42 #42, 1234, 7, 2025
 
 use_gradcam: True
 val_viz: False
@@ -46,8 +46,8 @@ triplet_loss:
   distance_matrix: cosine
 arcface_loss:
   activate: True # Set to False if using triplet loss
-  margin: 0.5 # 1,2:[0.5,50], 3:[0.3,30], 4:[0.5,64], 5:[0.3,64]
-  scale: 50 
+  margin: 0.3 # 1,2:[0.5,50], 3:[0.3,30], 4:[0.5,64], 5:[0.3,64]
+  scale: 64 
   theta_zero: 0.785 # ArcFace Sub-Center Dynamic Loss
   n_classes:
 
