--- a/configs/config-hpc-ATRWnew.yml
+++ b/configs/config-hpc-ATRWnew.yml
@@ -1,6 +1,6 @@
 # BEFORE RUN, CHECK: cache_path, splitter, precompute, arcface_loss.activate, epochs
 
-project_name: eagleID-ATRW-test
+project_name: eagleID-ATRW-new
 notes: 
 use_wandb: True
 wandb_entity: winniethepooh
@@ -14,7 +14,7 @@ splitter: metadata_split # custom_closed / metadata_split
 split_ratio: 0.8
 
 only_cache: True # if only_cache, will not run mmpose inference / segmentation and will only use cache results
-precompute: True # PREREQUISITE: Either delete files first or use metadata_split!
+precompute: True
 
 model_architecture: ResNetPlusModel # ResNetPlusModel, TripletModel, FusionModel, EfficientNet, TransformerModel
 backbone_name: resnet50 # efficientnet_b0, resnet50, swin_tiny_patch4_window7_224
@@ -28,9 +28,9 @@ save_interval: 10
 n_gpu: 1
 num_workers: 8
 gpu_ids: 
-seed: 42
+seed: 1234 #42, 1234, 7, 2025
 
-use_gradcam: False
+use_gradcam: True
 val_viz: False
 
 transforms:
@@ -46,18 +46,18 @@ triplet_loss:
   distance_matrix: cosine
 arcface_loss:
   activate: True # Set to False if using triplet loss
-  margin: 0.406 # [0.5, 32] or [0.406, 42]
-  scale: 42 # [0.50, 32] or [0.406, 42]
+  margin: 0.5 # 1,2:[0.5,50], 3:[0.3,30], 4:[0.5,64], 5:[0.3,64]
+  scale: 50 
   theta_zero: 0.785 # ArcFace Sub-Center Dynamic Loss
   n_classes:
 
 early_stopping:
   enabled: False
-  monitor: val/mAP5
-  min_delta: 0.0005
-  patience: 50
+  monitor: val/mAP
+  min_delta: 0.01
+  patience: 20
   verbose: true
-  mode: min
+  mode: max
 
 solver:
   OPT: adam  # adam, sgd
@@ -67,12 +67,12 @@ solver:
   LR_SCHEDULER: cosine_annealing  # step, multistep, reduce_on_plateau, cosine_annealing
   LR_DECAY_RATE: 0.1
   LR_STEP_SIZE: 10  # only when LR_SCHEDULER is step
-  LR_STEP_MILESTONES: [20, 30]  # only when LR_SCHEDULER is multistep
+  LR_STEP_MILESTONES: [15, 20]  # only when LR_SCHEDULER is multistep
   
   use_swa: False #Stochastic Weight Averaging (SWA) to help improve generalization
   swa_lr: 0.035
   swa_start: 24
-  lr_max: 0.0001
+  lr_max: 0.001
   lr_start: 3e-06
   lr_ramp_ep: 8
 
