--- a/configs/config-sweep-arcface-lite.yml
+++ b/configs/config-sweep-arcface-lite.yml
@@ -9,13 +9,13 @@ parameters:
     values: [4, 5]
 
   seed:
-    values: [42, 1234, 7]
+    values: [42, 1234]
 
   embedding_size:
     values: [256]
 
   arcface_loss.margin:
-    values: [0.3, 0.4, 0.5]
+    values: [0.4, 0.5]
 
   arcface_loss.scale:
     values: [30, 50, 64]
