--- a/configs/config-hpc-allbirds.yml
+++ b/configs/config-hpc-allbirds.yml
@@ -23,14 +23,14 @@ preprocess_lvl: 2 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: componen
 
 batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
-epochs: 80
+epochs: 50
 save_interval: 10
 n_gpu: 1
 num_workers: 8
 gpu_ids: 
-seed: 42
+seed: 42 #42, 1234, 7, 2025
 
-use_gradcam: False
+use_gradcam: True
 val_viz: True
 
 transforms:
@@ -46,14 +46,13 @@ triplet_loss:
   distance_matrix: cosine
 arcface_loss:
   activate: True # Set to False if using triplet loss
-  margin: 0.406 # [0.5, 32] or [0.406, 42]
-  scale: 42 # [0.50, 32] or [0.406, 42]
+  margin: 0.5 # 1,2:[0.5,30], 3:[0.3,50], 4,5:[0.4,50]
+  scale: 30
   theta_zero: 0.785 # ArcFace Sub-Center Dynamic Loss
   n_classes:
-
 early_stopping:
   enabled: False
-  monitor: val/mAP5
+  monitor: val/mAP
   min_delta: 0.0005
   patience: 50
   verbose: true
