--- a/configs/config-hpc-raptors.yml
+++ b/configs/config-hpc-raptors.yml
@@ -14,7 +14,7 @@ splitter: metadata_split # custom_closed / metadata_split
 split_ratio: 0.8
 
 only_cache: True # if only_cache, will not run mmpose inference / segmentation and will only use cache results
-precompute: False
+precompute: True
 
 model_architecture: ResNetPlusModel # ResNetPlusModel, TripletModel, FusionModel, EfficientNet, TransformerModel
 backbone_name: resnet50 # efficientnet_b0, resnet50, swin_tiny_patch4_window7_224
@@ -30,8 +30,8 @@ num_workers: 8
 gpu_ids: 
 seed: 42 #42, 1234, 7, 2025
 
-use_gradcam: True
-val_viz: True
+use_gradcam: False
+val_viz: False
 
 transforms:
   mean: [0.485, 0.456, 0.406]
