--- a/configs/config-hpc-goleagnew.yml
+++ b/configs/config-hpc-goleagnew.yml
@@ -19,19 +19,19 @@ precompute: True
 model_architecture: ResNetPlusModel # ResNetPlusModel, TripletModel, FusionModel, EfficientNet, TransformerModel
 backbone_name: resnet50 # efficientnet_b0, resnet50, swin_tiny_patch4_window7_224
 checkpoint: 
-preprocess_lvl: 3 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
+preprocess_lvl: 2 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
 
 batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
-epochs: 20
+epochs: 50
 save_interval: 10
 n_gpu: 1
 num_workers: 8
 gpu_ids: 
-seed: 42
+seed: 42 #42, 1234, 7, 2025
 
-use_gradcam: False
-val_viz: False
+use_gradcam: True
+val_viz: True
 
 transforms:
   mean: [0.485, 0.456, 0.406]
@@ -46,25 +46,24 @@ triplet_loss:
   distance_matrix: cosine
 arcface_loss:
   activate: True # Set to False if using triplet loss
-  margin: 0.406 # [0.5, 32] or [0.406, 42]
-  scale: 42 # [0.50, 32] or [0.406, 42]
+  margin: 0.5 # 1,2:[0.5,30], 3:[0.3,50], 4,5:[0.4,50]
+  scale: 30
   theta_zero: 0.785 # ArcFace Sub-Center Dynamic Loss
   n_classes:
-
 early_stopping:
   enabled: False
-  monitor: val/mAP5
+  monitor: val/mAP
   min_delta: 0.0005
   patience: 50
   verbose: true
   mode: min
 
 solver:
-  OPT: adam  # adam, SGD
+  OPT: adam  # adam, sgd
   WEIGHT_DECAY: 0.0001 # 0.001, 0.0001 (small dataset)
   MOMENTUM: 0.9  # only when OPT is sgd
-  BASE_LR: 0.01 # if SGD use 0.01 / if Adam use 0.001
-  LR_SCHEDULER: reduce_on_plateau  # step, multistep, reduce_on_plateau
+  BASE_LR: 0.001 # if SGD use 0.01 / if Adam use 0.001
+  LR_SCHEDULER: cosine_annealing  # step, multistep, reduce_on_plateau, cosine_annealing
   LR_DECAY_RATE: 0.1
   LR_STEP_SIZE: 10  # only when LR_SCHEDULER is step
   LR_STEP_MILESTONES: [20, 30]  # only when LR_SCHEDULER is multistep
@@ -72,9 +71,8 @@ solver:
   use_swa: False #Stochastic Weight Averaging (SWA) to help improve generalization
   swa_lr: 0.035
   swa_start: 24
-  lr_max: 0.0005
-  lr_start: 1.71e-06
-  lr_ramp_ep: 15
-  lr_decay: 0.8
+  lr_max: 0.0001
+  lr_start: 3e-06
+  lr_ramp_ep: 8
 
 re_ranking: True
