--- a/configs/config-hpc-raptor-elephant.yml
+++ b/configs/config-hpc-raptor-elephant.yml
@@ -1,6 +1,6 @@
 # BEFORE RUN, CHECK: cache_path, splitter, precompute, arcface_loss.activate, epochs
 
-project_name: eagleID-multispecies
+project_name: eagleID-dataset-scope
 notes: raptors and elephants
 use_wandb: True
 wandb_entity: winniethepooh
@@ -72,6 +72,6 @@ solver:
   swa_start: 24
   lr_max: 0.0001
   lr_start: 3e-06
-  lr_ramp_ep: 8
+  lr_ramp_ep: 0
 
 re_ranking: False
