--- a/configs/config-hpc-fliers.yml
+++ b/configs/config-hpc-fliers.yml
@@ -1,6 +1,6 @@
 # BEFORE RUN, CHECK: cache_path, splitter, precompute, arcface_loss.activate, epochs
 
-project_name: eagleID-multispecies
+project_name: eagleID-dataset-scope
 notes: fliers- raptors, BirdIndividualID, whaleshark, dolphin
 use_wandb: True
 wandb_entity: winniethepooh
@@ -23,7 +23,7 @@ preprocess_lvl: 2 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: componen
 
 batch_size: 64 # 32, 64, 128 (Larger can provide more diverse triplets in each batch -> impprove quality of mined triplets)
 img_size: 224 # 224, 256, 384, 512
-epochs: 50
+epochs: 20
 save_interval: 10
 n_gpu: 1
 num_workers: 8
@@ -75,4 +75,4 @@ solver:
   lr_start: 3e-06
   lr_ramp_ep: 0
 
-re_ranking: True
+re_ranking: False
