--- a/configs/config-hpc-allbirds.yml
+++ b/configs/config-hpc-allbirds.yml
@@ -45,7 +45,7 @@ triplet_loss:
   mining_type: semihard # choose between: semihard, hard (more challenging triplets)
   distance_matrix: cosine
 arcface_loss:
-  activate: True # Set to False if using triplet loss
+  activate: False # Set to False if using triplet loss
   margin: 0.5 # 1,2:[0.5,30], 3:[0.3,50], 4,5:[0.4,50]
   scale: 30
   theta_zero: 0.785 # ArcFace Sub-Center Dynamic Loss
