--- a/configs/config-sweep-datasetscope.yml
+++ b/configs/config-sweep-datasetscope.yml
@@ -17,7 +17,7 @@ parameters:
     values: [256]
 
   arcface_loss.margin:
-    values: [0.5]
+    values: [0.3,0.4, 0.5]
 
   arcface_loss.scale:
-    values: [50, 64]
+    values: [30, 50, 64]
