--- a/configs/config-hpc-mixed.yml
+++ b/configs/config-hpc-mixed.yml
@@ -1,12 +1,12 @@
 # BEFORE RUN, CHECK: cache_path, splitter, precompute, arcface_loss.activate, epochs
 
 project_name: eagleID-dataset-scope
-notes: fliers- raptors, ELPephant, SealID, hyenas
+notes: MIXED- raptors, ELPephant, SealID, hyenas, ATRW, BirdIndividualID, whaleshark, NDD20, MPDD, turtle
 use_wandb: True
 wandb_entity: winniethepooh
 
-wildlife_name: raptors, ELPephant, SealID, hyenas
-animal_cat: bird, mammal, mammal, mammal
+wildlife_name: raptors, ELPephant, SealID, hyenas, ATRW, BirdIndividualID, whaleshark, NDD20, MPDD, turtle
+animal_cat: bird, mammal, mammal, mammal, mammal, bird, fish, mammal, mammal, reptile
 outdir: results
 dataset: /proj/nobackup/aiforeagles/
 cache_path: /proj/nobackup/aiforeagles/EagleID/dataset/dataframe/cache_mixed_split.csv # _split.csv if using metadata_split
@@ -28,10 +28,10 @@ save_interval: 10
 n_gpu: 1
 num_workers: 8
 gpu_ids: 
-seed: 1234 #42, 1234, 7, 2025
+seed: 42 #42, 1234, 7, 2025
 
-use_gradcam: False
-val_viz: False
+use_gradcam: True
+val_viz: True
 
 transforms:
   mean: [0.485, 0.456, 0.406]
@@ -46,8 +46,8 @@ triplet_loss:
   distance_matrix: cosine
 arcface_loss:
   activate: True # Set to False if using triplet loss
-  margin: 0.5 # 1,2:[0.5,30], 3:[0.3,50], 4,5:[0.4,50]
-  scale: 30
+  margin: 0.3 # 1,2:[0.5,30], 3:[0.3,50], 4,5:[0.4,50] ; multispecies:[0.3,50]
+  scale: 50
   theta_zero: 0.785 # ArcFace Sub-Center Dynamic Loss
   n_classes:
 early_stopping:
