--- a/configs/config-hpc-raptors.yml
+++ b/configs/config-hpc-raptors.yml
@@ -46,8 +46,8 @@ triplet_loss:
   distance_matrix: cosine
 arcface_loss:
   activate: True # Set to False if using triplet loss
-  margin: 0.4 # 1,2:[0.5,30], 3:[0.3,50], 4,5:[0.4,50]
-  scale: 50
+  margin: 0.3 # 1,2:[0.5,30] 2!:0.3,50, 3:[0.3,50], 4!,5!:0.3,30, 4,5:[0.4,50]
+  scale: 30
   theta_zero: 0.785 # ArcFace Sub-Center Dynamic Loss
   n_classes:
 
