--- a/configs/config-hpc-fliers.yml
+++ b/configs/config-hpc-fliers.yml
@@ -14,7 +14,7 @@ splitter: metadata_split # custom_closed / metadata_split
 split_ratio: 0.8
 
 only_cache: True # if only_cache, will not run mmpose inference / segmentation and will only use cache results
-precompute: True # PREREQUISITE: Either delete files first or use metadata_split!
+precompute: False # PREREQUISITE: Either delete files first or use metadata_split!
 
 model_architecture: ResNetPlusModel # ResNetPlusModel, TripletModel, FusionModel, EfficientNet, TransformerModel
 backbone_name: resnet50 # efficientnet_b0, resnet50, swin_tiny_patch4_window7_224
