--- a/configs/config-hpc-domestic.yml
+++ b/configs/config-hpc-domestic.yml
@@ -14,7 +14,7 @@ splitter: metadata_split # custom_closed / metadata_split
 split_ratio: 0.8
 
 only_cache: True # if only_cache, will not run mmpose inference / segmentation and will only use cache results
-precompute: True # PREREQUISITE: Either delete files first or use metadata_split!
+precompute: False # PREREQUISITE: Either delete files first or use metadata_split!
 
 model_architecture: ResNetPlusModel # ResNetPlusModel, TripletModel, FusionModel, EfficientNet, TransformerModel
 backbone_name: resnet50 # efficientnet_b0, resnet50, swin_tiny_patch4_window7_224
@@ -28,7 +28,7 @@ save_interval: 10
 n_gpu: 1
 num_workers: 8
 gpu_ids: 
-seed: 7 #42, 1234, 7, 2025
+seed: 42 #42, 1234, 7, 2025
 
 use_gradcam: True
 val_viz: True
