--- a/configs/config-hpc-artportalen.yml
+++ b/configs/config-hpc-artportalen.yml
@@ -23,7 +23,7 @@ checkpoint:
 preprocess_lvl: 2 # 0: no preprocess, 1: bbox, 2: mask, 3: skeleton, 4: components, 5: heatmaps
 
 batch_size: 128 # Smaller batch size for transformer models
-img_size: 224 # 224 for swin models, 384 for larger models
+img_size: 256 # 224 for swin models, 384 for larger models
 epochs: 100
 save_interval: 10
 n_gpu: 1
@@ -62,7 +62,7 @@ solver:
   WEIGHT_DECAY: 0.01 # Higher weight decay for transformers
   MOMENTUM: 0.9  # only when OPT is sgd
   BASE_LR: 0.001 # Lower learning rate for transformers
-  LR_SCHEDULER: cosine_annealing  # step, multistep, reduce_on_plateau, cosine_annealing
+  LR_SCHEDULER: reduce_on_plateau  # step, multistep, reduce_on_plateau, cosine_annealing
   LR_DECAY_RATE: 0.1
   LR_STEP_SIZE: 10  # only when LR_SCHEDULER is step
   LR_STEP_MILESTONES: [30, 50, 70]  # only when LR_SCHEDULER is multistep
