--- a/configs/config-hpc-artportalen-transformer-advanced.yml
+++ b/configs/config-hpc-artportalen-transformer-advanced.yml
@@ -77,7 +77,7 @@ early_stopping:
   min_delta: 0.01
   patience: 15
   verbose: true
-  mode: max
+  mode: min
 
 # Regularization configuration
 regularization:
