--- a/configs/config-hpc-artportalen-transformer-advanced.yml
+++ b/configs/config-hpc-artportalen-transformer-advanced.yml
@@ -58,7 +58,7 @@ solver:
   
   # New transformer-specific parameters
   WARMUP_EPOCHS: 5  # Warmup period before aggressive augmentation
-  WARMUP_FREEZE: 2  # Freeze backbone for first 5 epochs
+  WARMUP_FREEZE: 5  # Freeze backbone for first 5 epochs (match warmup)
   MIN_LR: 1e-6  # Minimum learning rate
   LAYER_DECAY: 0.65  # Layer-wise learning rate decay factor
   HEAD_LR_MULTIPLIER: 10  # Head learning rate multiplier (5x higher than backbone)
@@ -73,7 +73,7 @@ solver:
 # Early stopping with better monitoring
 early_stopping:
   enabled: True
-  monitor: val/loss 
+  monitor: val/mae   # Monitor MAE for early stopping (ordinal regression)
   min_delta: 0.01
   patience: 15
   verbose: true
@@ -83,7 +83,7 @@ early_stopping:
 regularization:
   # Backbone regularization
   drop_rate: 0.1  # Dropout in backbone
-  drop_path_rate: 0.1  # Stochastic depth
+  drop_path_rate: 0.05  # Stochastic depth (reduced for less regularization)
   
   # Gradient clipping
   gradient_clip_val: 1.0
@@ -100,14 +100,3 @@ wandb:
   name: 'artportalen-transformer-optimized'
   tags: ['artportalen', 'transformer', 'optimized', 'age-classification', 'llrd', 'warmup', 'freeze']
 
-# Training Strategy Notes:
-# 1. Lower learning rate (1e-4) with warmup for stable training
-# 2. Higher weight decay (0.05) for better regularization
-# 3. Layer-wise learning rate decay (0.65) for backbone vs classifier
-# 4. Removed label smoothing (0.0) for small class count
-# 5. Aggressive augmentation only after warmup period (controlled in model)
-# 6. Enhanced classifier with additional layers and normalization
-# 7. Stochastic depth and dropout in backbone for regularization
-# 8. Monitor F1 score instead of accuracy for better model selection
-# 9. Freeze backbone for first 5 epochs to let classifier learn first
-# 10. Head learning rate 5x higher than backbone for better convergence 
